// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageList component should match snapshot of active list 1`] = `
<div
  className="text-selection-section"
>
  <div
    className="language-name-list"
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="pull-down-refresh"
      style={
        Object {
          "height": 0,
          "maxHeight": 0,
        }
      }
    >
      <span
        style={
          Object {
            "textAlign": "center",
            "width": "100%",
          }
        }
      >
        Pull to Refresh
      </span>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="Azerbaijani, North"
    >
      <h4
        className=""
      >
        AZƏRBAYCAN
         - ( Azerbaijani, North )
      </h4>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="Aari"
    >
      <h4
        className=""
      >
        Aari
      </h4>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="Abau"
    >
      <h4
        className=""
      >
        Abau
      </h4>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="Abiji"
    >
      <h4
        className=""
      >
        Abiji
      </h4>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="Abun"
    >
      <h4
        className=""
      >
        Abun
      </h4>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="Aceh"
    >
      <h4
        className=""
      >
        Aceh
      </h4>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="Achagua"
    >
      <h4
        className=""
      >
        Achagua
      </h4>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="Acholi"
    >
      <h4
        className=""
      >
        Acholi
      </h4>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="Achuar-Shiwiar"
    >
      <h4
        className=""
      >
        Achuar-Shiwiar
      </h4>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="Aché"
    >
      <h4
        className=""
      >
        Aché
      </h4>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="Achi"
    >
      <h4
        className=""
      >
        Achí
         - ( Achi )
      </h4>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="Achi de Cubulco"
    >
      <h4
        className=""
      >
        Achí, Cubulco
         - ( Achi de Cubulco )
      </h4>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="Adele"
    >
      <h4
        className=""
      >
        Adele
      </h4>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="Adioukrou"
    >
      <h4
        className=""
      >
        Adioukrou
      </h4>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="Adzera"
    >
      <h4
        className=""
      >
        Adzera
      </h4>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="Agta, Dupaninan"
    >
      <h4
        className=""
      >
        Agarabi
         - ( Agta, Dupaninan )
      </h4>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="Agta, Dupaninan"
    >
      <h4
        className=""
      >
        Agta, Dupaninan
      </h4>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="Agta, Pahanan"
    >
      <h4
        className=""
      >
        Agta, Pahanan
      </h4>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="Awakateko"
    >
      <h4
        className=""
      >
        Aguacateco
         - ( Awakateko )
      </h4>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="English"
    >
      <h4
        className="active-language-name"
      >
        English
      </h4>
    </div>
  </div>
</div>
`;

exports[`LanguageList component should match snapshot of active list with an applied filter 1`] = `
<div
  className="text-selection-section"
>
  <div
    className="language-name-list"
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="pull-down-refresh"
      style={
        Object {
          "height": 0,
          "maxHeight": 0,
        }
      }
    >
      <span
        style={
          Object {
            "textAlign": "center",
            "width": "100%",
          }
        }
      >
        Pull to Refresh
      </span>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="English"
    >
      <h4
        className="active-language-name"
      >
        English
      </h4>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="Abun"
    >
      <h4
        className=""
      >
        Abun
      </h4>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="Abau"
    >
      <h4
        className=""
      >
        Abau
      </h4>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="Acholi"
    >
      <h4
        className=""
      >
        Acholi
      </h4>
    </div>
    <div
      className="language-name"
      onClick={[Function]}
      role="button"
      style=""
      tabIndex={0}
      title="Aceh"
    >
      <h4
        className=""
      >
        Aceh
      </h4>
    </div>
  </div>
</div>
`;
